# snet-marketplace-service

./: .gitignore  Dockerfile  README.md  build.sh  channel.py  constant.py  error.py  handle_contracts.py  handle_contracts_db.py  health_check.sh  lambda_handler.py  log_setup.py  models.py  package.json  parse_events.sh  repository.py  requirement.txt  service.py  service_status.py  sonar-project.properties  waitformysql.sh  wallet_dockerfile
contract_api/: Makefile  alembic.ini  channel.py  config.example.json  config.py  constant.py  errors.py  exceptions.py  filter.py  lambda_handler.py  mpe.py  package.json  pyproject.toml  registry.py  requirement.txt  requirements.txt  search.py  serverless.yml  service.py  service_status.py
contract_api/alembic/: env.py
contract_api/alembic/versions/: 057da5046949_unique_constraint_for_service_group_.py  0adc6366ace3_added_democomponent_flag_in_service_.py  0cc7c0eab723_added_democomponent_flag_in_service_.py  25a807e99fc4_changed_decimal_precision.py  282be80209eb_offchain_service_config_table_added.py  4dd258579fce_offchain_service_config_table_added.py  5ae9b3bdc7ce_create_banner_and_cta.py  5c110ac11682_onupdate_timestamp.py  5f9cf395f175_made_democomponent_in_sevicemetadata_.py  6947016cfc24_add_is_curated_for_org.py  698ffdd6eeba_consume_balance.py  9756edf63f44_remo_demo_component_available_column.py  9c30245d4716_service_media_table.py  a5b328b4edec_service__media__table__create.py  aff69d55aea7_remove_demo_column_from_servicemetadata.py  b7e01423560c_made_democomponent_in_sevicemetadata_.py  b90651e00ea9_rename_to_metadata_uri.py  d8822b756c18_baseline.py  da6de6540839_offchain_service_config_table_added.py  e2a6a7075af0_mapping_delete_tables.py  e7fd7a0fc50d_create_banner_and_cta.py
contract_api/application/consumers/: consumer_factory.py  event_consumer.py  mpe_event_consumer.py  organization_event_consumer.py  organization_event_consumers.py  service_event_consumer.py  service_event_consumers.py
contract_api/application/handler/: service_handler.py
contract_api/application/handlers/: channel_handlers.py  consumer_handlers.py  dapp_build_handlers.py  new_channel_handlers.py  new_dapp_build_handlers.py  new_organization_handlers.py  new_service_handlers.py  organization_handlers.py  service_handler.py  service_handlers.py
contract_api/application/schema/: service.py
contract_api/application/schemas/: channel_schemas.py  consumer_schemas.py  dapp_build_schemas.py  organization_schemas.py  service_schemas.py
contract_api/application/service/: registry_service.py  update_assets_service.py
contract_api/application/services/: banner_service.py  channel_service.py  dapp_build_service.py  organization_service.py  registry_service.py  service_service.py  update_assets_service.py
contract_api/consumers/: consumer_factory.py  event_consumer.py  mpe_event_consumer.py  organization_event_consumer.py  service_event_consumer.py
contract_api/consumers/testcases/: test_mpe_event_consumer.py  test_organization_event_consumer.py  test_service_event_consumer.py
contract_api/consumers/tests/: test_mpe_event_consumer.py  test_organization_event_consumer.py  test_service_event_consumer.py
contract_api/dao/: common_repository.py  mpe_repository.py  organization_repository.py  repository.py  service_repository.py
contract_api/documentation/models/: get_all_group_for_org.json  (+14 more)
contract_api/handlers/: channel_handlers.py  consumer_handlers.py  organization_handlers.py  service_handlers.py  ui_content_handlers.py
contract_api/infrastructure/: daemon_client.py  db.py  models.py  storage_provider.py
contract_api/services/: banner_service.py  stub_service.py
contract_api/testcases/: test_variables.py
contract_api/tests/: test_variables.py
dapp_user/: README.md  config.py  constant.py  exceptions.py  lambda_handler.py  package.json  pyproject.toml  requirement.txt  requirements.txt  serverless.yml  settings.py  user.py
dapp_user/alembic/: env.py
dapp_user/application/: schemas.py
dapp_user/infrastructure/: cognito_api.py  contract_api_client.py  db.py  models.py  wallets_api_client.py  wallets_client.py
dapp_user/stubs/: state_service_pb2.py  state_service_pb2_grpc.py
dapp_user/testcases/: script.sql
deployer/: Makefile  README.md  config.example.json  config.py  constant.py  exceptions.py  package.json  pyproject.toml  serverless.yml  utils.py
deployer/alembic/: env.py
deployer/docs/: initial_design.md
deployer/domain/: base_domain.py
deployer/infrastructure/: db.py  models.py
deployer/tests/: conftest.py
registry/: Makefile  config.example.json  config.py  constants.py  exceptions.py  mail_templates.py  org_serverless.yml  package.json  pyproject.toml  requirements.txt  serverless.yml  service_serverless.yml  settings.py  slack-serverless.yml
registry/alembic/: env.py
registry/application/: access.py
registry/consumer/: event_consumer.py  organization_event_consumer.py  service_event_consumer.py
registry/domain/: exceptions.py  item_pipeline.py
registry/infrastructure/: models.py  storage_provider.py
registry/layers/: README.MD  serverless.yml
registry/migration/: config.py  mapper.py  requirements.txt
registry/testcases/: test_variables.py
signer/: README.md  config.example.json  config.py  constant.py  exceptions.py  lambda_handler.py  metering_auth.py  package.json  pyproject.toml  requirement.txt  requirements.txt  serverless.yml  settings.py  signature_authenticator.py  signer.py  signers.py
signer/alembic/: env.py
signer/application/: handlers.py  schemas.py  service.py
signer/authenticators/: daemon_authenticator.py  deamon_authenticator.py
signer/domain/: free_call_token.py
signer/infrastructure/: contract_api_client.py  daemon_client.py  models.py  signers.py
signer/sdk/: account.py  mpe_contract.py  payment_channel.py  service_client.py
signer/snet_cli/: utils.py
signer/stubs/: state_service.proto  state_service_pb2.py  state_service_pb2.pyi  state_service_pb2_grpc.py  state_service_pb2_grpc.pyi
signer/tests/: test_sign_auth.py  test_signer.py
(+830 files in other folders)
