[tool.poetry]
name = "contract-api"
version = "0.1.0"
description = ""
authors = ["snet"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.6"
boto3 = "1.37.30"
requests = "2.32.3"
web3 = "7.10.0"
pymysql = "1.1.1"
alembic = "1.15.2"
grpcio = "1.71.0"
grpcio-tools = "1.71.0"
grpcio-health-checking = "1.71.0"
pydantic = "2.11.3"
pydantic-settings = "2.8.1"
sqlalchemy = "2.0.41"
rlp = "4.1.0"
protobuf = "5.29.4"
lighthouseweb3 = "0.1.4"
ipfshttpclient = "0.4.13"
schema = "0.7.7"


[tool.poetry.group.dev.dependencies]
ruff = "0.11.4"
pytest = "8.3.5"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.ruff]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
