[tool.poetry]
name = "dapp_user"
version = "0.1.0"
description = ""
authors = ["snet"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.6"
boto3 = "1.37.30"
web3 = "7.10.0"
pymysql = "1.1.1"
alembic = "1.15.2"
grpcio = "1.71.0"
deepdiff = "8.4.2"
pydantic = "2.11.3"
pydantic-settings = "2.8.1"
sqlalchemy = "2.0.41"
rlp = "4.1.0"
grpcio-tools = "1.71.0"
schema = "0.7.7"

[tool.poetry.group.dev.dependencies]
ruff = "0.11.4"
pytest = "8.3.5"
boto3-stubs = "1.39.4"
coverage = "7.9.2"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
strict = true
python_version = "3.12"
plugins = ["mypy_protobuf.plugin"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
