[tool.poetry]
name = "registry"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.37.30"
requests = "^2.32.3"
web3 = "^7.10.0"
pymysql = "^1.1.1"
alembic = "^1.15.2"
lighthouseweb3 = "^0.1.4"
grpcio = "^1.71.0"
protobuf = "^6.30.2"
cerberus = "^1.3.7"
deepdiff = "^8.4.2"
pydantic = "^2.11.3"
pydantic-settings = "^2.8.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.4"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.ruff]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
