[tool.poetry]
name = "registry"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.6"
boto3 = "1.37.30"
requests = "2.32.3"
web3 = "7.10.0"
pymysql = "1.1.1"
alembic = "1.15.2"
lighthouseweb3 = "0.1.4"
grpcio = "1.71.0"
protobuf = "4.25.8"
cerberus = "1.3.7"
deepdiff = "8.4.2"
pydantic = "2.11.3"
pydantic-settings = "2.8.1"
ipfshttpclient = "0.4.13"
sqlalchemy = "2.0.41"
rlp = "4.1.0"


[tool.poetry.group.dev.dependencies]
ruff = "0.11.4"
pytest = "8.3.5"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.ruff]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
