[tool.poetry]
name = "signer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.6"
boto3 = "1.37.30"
web3 = "7.10.0"
pymysql = "1.1.1"
alembic = "1.15.2"
pydantic = "2.11.3"
pydantic-settings = "2.8.1"
ipfshttpclient = "0.4.13"
sqlalchemy = "2.0.41"
rlp = "4.1.0"
cryptography = "44.0.2"
grpcio-tools = "1.71.0"


[tool.poetry.group.dev.dependencies]
ruff = "0.11.4"
boto3-stubs = {extras = ["essential"], version = "^1.38.24"}
mypy-protobuf = "3.6.0"
types-protobuf = "6.30.2.20250516"
mypy = "1.15.0"
pytest = "8.4.0"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
  "stubs/state_service_pb2.py",
  "stubs/state_service_pb2.pyi",
  "stubs/state_service_pb2_grpc.py",
  "stubs/state_service_pb2_grpc.pyi"
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
strict = true
ignore_missing_imports = true
python_version = "3.12"
plugins = ["mypy_protobuf.plugin"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
